swagger, fixes
